--- a/continuity/infinite/01.html
+++ b/continuity/infinite/01.html
@@ -16,7 +16,7 @@
       <h2>Description of the graph</h2>
       <p>The graph is y equals one over x squared. The graph has x- and y-axes and the scale for both axes is in units of one, labeled from minus five to plus five. The graph consists of two separate branches that is symmetric about the vertical line x equals zero, the y-axis.</p>
 
-      <p>The first branch begins at x equals five and y is close to the x-axis. As it moves to the right, the graph increases very slowly until it reaches the point x equals minus one and y equals one. Then the graph increases steeply and the y-value becomes infinitely large as x continues to approach zero.</p>
+      <p>The first branch begins at x equals minus five and y is positive and close to zero. As it moves to the right, the graph increases very slowly until it reaches the point x equals minus one and y equals one. Then the graph increases steeply and the y-value becomes infinitely large as x continues to approach zero.</p>
 
       <p>The y-value is undefined when x equals zero.</p>
 
