--- a/quiz/05.html
+++ b/quiz/05.html
@@ -5,13 +5,35 @@
     <script src="../p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="../style.css">
     <meta charset="utf-8">
+    <title>Quiz 5</title>
   </head>
   <body>
   	<main id="wrapper">
       <p><a href="../index.html">Back to top</a></p>
-	    <script src="05.js"></script>
-	    <p>Quiz 5</p>
-	    <p>Using the graph shown below, identify and classify each point of discontinuity.</p>
+
+	    <h1>Quiz 5</h1>
+
+      <h2>Question</h2>
+	    <p>The following graph has x- and y-axes and the scale for both axes is in units of one, labeled from minus five to plus five. Identify and classify each point of discontinuity.</p>
+
+      <section id="sonification">
+      <h2>Sonification</h2>
+      <p>Click a play button to start sonification.</p>
+      <script src="05.js"></script>
+      </section>
+
+      <h2>Answer</h2>
+      <p>The graph has an inifinite discontinuity at x equals minus one, a jump discontinuity at x equals one, and a removable discontinuity at x equals four.</p>
+
+      <h2>Explanation</h2>
+      <p>The graph consists of three segments.</p>
+      <p>The first segment begins at x equals minus five and y is close to but smaller than one. As it moves to the right, the graph decreases very slowly at first, then it decreases steeply around x passes minus two and the y-value becomes infinitely small as x continues to approach minus one. That is the end of the first segment.</p>
+      <p>There is an inifinite discontinuity at x equals minus one where the y-value is undefined.</p>
+      <p>The second segment begins when x is larger than but very close to minus one and y-value is very small. As it moves to the right, the graph increases steeply at first until x is close to zero, then it increases slowly until it reaches the point x is close to one and y is close to one. That is the end of the second segment.</p>
+      <p>There is a jump discontinuity at x equals one where the y-value jumps from one to three.</p>
+      <p>The shape of the third segment is a straignt line with a slope of negative one. It begins at x equals one and y equals three. As it moves to the right, the graph decreases. There is a removable discontinuity at x equals four where the y-value becomes two, instead of zero, at the point. The graph continues to decrease until x equals five and y equals minus one. That is the end of the third segment.</p>
+
+      <p><a href="../index.html">Back to top</a></p>
   	</main>
 	</body>
 </html>
