--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   <body>
     <main id="wrapper">
     	<h1>Sonification of Math Graphs for People with Visual Impairments</h1>
-      <h2>About</h2>
-      <p>This project is to use sonification (i.e. sound) to convey math graphs for people with visual impairments. Math graphs are commonly used in education. But, since they are based on visuals, it is not easy for people who are blind to know the content of the graphs. In this project, I want to explore how sonification can be useful to communicate mathematical graphs in real time using only a web browser.</p>
+
+      <h2>About this website</h2>
+      <p>This website is a project that uses sonification (i.e. sound) to communicate mathematical graphs to people with visual impairments. Math graphs are commonly used in education. But, since they are based on visuals, it is not easy for people who are blind to know the content of the graphs. In this project, I want to explore how sonification can be useful to communicate mathematical graphs in real time using only a web browser.</p>
 
       <p>More secifically, I focused on the mathematical concepts of continuity and discontinuity taught in calculus. In general, math graphs are frequently used to introduce the concepts of continuity and discontinuity. But, what if you can't rely on visuals? In this project, I designed sonificaiton to introduce the concepts of continuity and discontinuity.</p>
 
@@ -58,6 +59,9 @@
         <li><a href="quiz/04.html">Quiz 4</a></li>
         <li><a href="quiz/05.html">Quiz 5</a></li>
       </ul>
+
+      <h2>About me</h2>
+      <p>As of April 2021, Keita Ohshiro is a master's student in Integrated Digital Media program at New York University. This project is a part of my master's thesis. For more information, <a href="https://bick-jp.github.io/">see Keita Ohshito's website</a>.</p>
     </main>
 	</body>
 </html>
