added meta info

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 	<head>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
-    <title>Sonification of Math Graphs for People with Visual Impairments</title>
+    <title>Home - Sonification of Math Graphs for People with Visual Impairments</title>
+    <meta name="description" content="This website is a project that uses sonification (i.e. sound) to communicate mathematical graphs to people with visual impairments. Math graphs are commonly used in education. But, since they are based on visuals, it is not easy for people who are blind to know the content of the graphs. In this project, I want to explore how sonification can be useful to communicate mathematical graphs in real time using only a web browser.">
+    <meta name="author" content="Keita Ohshiro">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <main id="wrapper">
