--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
     <title>Home - Sonification of Math Graphs for People with Visual Impairments</title>
-    <meta name="description" content="This website is a project that uses sonification (i.e. sound) to communicate mathematical graphs to people with visual impairments. Math graphs are commonly used in education. But, since they are based on visuals, it is not easy for people who are blind to know the content of the graphs. In this project, I want to explore how sonification can be useful to communicate mathematical graphs in real time using only a web browser.">
+    <meta name="description" content="Project using sonification (i.e. sound) to communicate mathematical graphs to people with visual impairments.">
     <meta name="author" content="Keita Ohshiro">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:url" content="https://bick-jp.github.io/p5jsMathGraphSonification/index.html" />
+    <meta property="og:title" content="Home - Sonification of Math Graphs for People with Visual Impairments" />
+    <meta property="og:description" content="Project using sonification (i.e. sound) to communicate mathematical graphs to people with visual impairments." />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:creator" content="@bick_jp" />
   </head>
   <body>
     <main id="wrapper">
@@ -64,7 +69,7 @@
       </ul>
 
       <h2>About me</h2>
-      <p>As of April 2021, Keita Ohshiro is a master's student in Integrated Digital Media program at New York University. This project is a part of my master's thesis. For more information, <a href="https://bick-jp.github.io/">see Keita Ohshito's website</a>.</p>
+      <p>As of April 2021, Keita Ohshiro is a master's student in Integrated Digital Media program at New York University. This project is a part of my master's thesis. For more information, see <a href="https://bick-jp.github.io/">Keita Ohshito's website</a>.</p>
     </main>
 	</body>
 </html>
